--- a/app/src/main/res/layout/item_reading_history.xml
+++ b/app/src/main/res/layout/item_reading_history.xml
@@ -1,65 +1,69 @@
-<?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:cardBackgroundColor="#2D2D2D"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="4dp"
-    app:strokeColor="@color/mystical_purple"
-    app:strokeWidth="1dp">
+    app:cardBackgroundColor="@color/dark_background"
+    app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
 
-        <TextView
-            android:id="@+id/textViewDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="serif"
-            android:textColor="@color/mystical_gold"
-            android:textSize="14sp"
+        <ImageView
+            android:id="@+id/imageViewMysticalPointer"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:src="@drawable/ic_mystical_pointer"
+            android:rotation="90"
+            android:tint="@color/mystical_dark_purple"
+            android:layout_marginStart="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="October 21, 2023" />
+            app:layout_constraintBottom_toBottomOf="@id/textViewQuestion" />
 
         <TextView
             android:id="@+id/textViewQuestion"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="serif"
+            android:textColor="@color/mystical_gold"
+            android:textSize="16sp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageViewMysticalPointer"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="serif"
             android:textColor="@color/mystical_light"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewDate"
-            tools:text="What does the future hold for my career?" />
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@id/textViewQuestion" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroupCards"
+        <HorizontalScrollView
+            android:id="@+id/scrollViewChips"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewQuestion">
+            app:layout_constraintStart_toStartOf="@id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@id/textViewDate">
 
-            <com.google.android.material.chip.Chip
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipGroupCards"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/mystical_light"
-                app:chipBackgroundColor="#3D3D3D"
-                app:chipStrokeColor="@color/mystical_purple"
-                app:chipStrokeWidth="1dp"
-                tools:text="The Fool" />
+                app:singleLine="true" />
 
-        </com.google.android.material.chip.ChipGroup>
+        </HorizontalScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.google.android.material.card.MaterialCardView>
+</androidx.cardview.widget.CardView>
