--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,8 @@
     <color name="mystical_gold">#FFD700</color>
     <color name="mystical_light">#E1BEE7</color>
     <color name="selected_card_stroke">#9C27B0</color>
-    
+    <color name="mystical_dark_purple">#483D8B</color>
+
     <color name="background_color">#F5F5F5</color>
     <color name="card_background">#FFFFFF</color>
     <color name="primary_text">#212121</color>
