--- a/app/src/main/res/layout/item_tarot_card.xml
+++ b/app/src/main/res/layout/item_tarot_card.xml
@@ -3,18 +3,32 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_height="250dp"
+    android:layout_margin="8dp"
     app:cardBackgroundColor="@color/dark_background"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
-    <ImageView
-        android:id="@+id/imageCard"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:scaleType="centerCrop"
-        android:contentDescription="@null"
-        android:padding="4dp"/>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imageCard"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"
+            android:contentDescription="@null"
+            android:padding="4dp"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/mystical_purple"
+            android:visibility="gone"/>
+
+    </FrameLayout>
 
 </androidx.cardview.widget.CardView>
