--- a/app/src/main/res/layout/activity_reading_result.xml
+++ b/app/src/main/res/layout/activity_reading_result.xml
@@ -65,7 +65,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewResults"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:clipToPadding="false"
             android:orientation="horizontal"
