--- a/app/src/main/res/layout/item_tarot_card_result.xml
+++ b/app/src/main/res/layout/item_tarot_card_result.xml
@@ -2,19 +2,25 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardBackgroundColor="@color/dark_background"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
-    <ImageView
-        android:id="@+id/imageCard"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="center"
-        android:contentDescription="@null"
-        android:padding="4dp"/>
+        android:layout_height="450dp">
+
+        <ImageView
+            android:id="@+id/imageCard"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"
+            android:contentDescription="@null"
+            android:padding="4dp"/>
+
+    </FrameLayout>
 
 </androidx.cardview.widget.CardView>
